/* Copyright 2021 The Waymo Open Dataset Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto2";

package waymo.open_dataset;

message Map {
  repeated MapFeature map_features = 1;
  repeated DynamicState dynamic_states = 2;
}

message DynamicState {
  optional double timestamp_seconds = 1;
  repeated TrafficSignalLaneState lane_states = 2;
}

message TrafficSignalLaneState {
  optional int64 lane = 1;

  enum State {
    LANE_STATE_UNKNOWN = 0;
    LANE_STATE_ARROW_STOP = 1;
    LANE_STATE_ARROW_CAUTION = 2;
    LANE_STATE_ARROW_GO = 3;
    LANE_STATE_STOP = 4;
    LANE_STATE_CAUTION = 5;
    LANE_STATE_GO = 6;
    LANE_STATE_FLASHING_STOP = 7;
    LANE_STATE_FLASHING_CAUTION = 8;
  }

  optional State state = 2;
  optional MapPoint stop_point = 3;
}

message MapFeature {
  optional int64 id = 1;

  oneof feature_data {
    LaneCenter lane = 3;
    RoadLine road_line = 4;
    RoadEdge road_edge = 5;
    StopSign stop_sign = 7;
    Crosswalk crosswalk = 8;
    SpeedBump speed_bump = 9;
    Driveway driveway = 10;
  }
}

message MapPoint {
  optional double x = 1;
  optional double y = 2;
  optional double z = 3;
}

message BoundarySegment {
  optional int32 lane_start_index = 1;
  optional int32 lane_end_index = 2;
  optional int64 boundary_feature_id = 3;
  optional RoadLine.RoadLineType boundary_type = 4;
}

message LaneNeighbor {
  optional int64 feature_id = 1;
  optional int32 self_start_index = 2;
  optional int32 self_end_index = 3;
  optional int32 neighbor_start_index = 4;
  optional int32 neighbor_end_index = 5;
  repeated BoundarySegment boundaries = 6;
}

message LaneCenter {
  optional double speed_limit_mph = 1;

  enum LaneType {
    TYPE_UNDEFINED = 0;
    TYPE_FREEWAY = 1;
    TYPE_SURFACE_STREET = 2;
    TYPE_BIKE_LANE = 3;
  }
  optional LaneType type = 2;
  optional bool interpolating = 3;
  repeated MapPoint polyline = 8;
  repeated int64 entry_lanes = 9 [packed = true];
  repeated int64 exit_lanes = 10 [packed = true];
  repeated BoundarySegment left_boundaries = 13;
  repeated BoundarySegment right_boundaries = 14;
  repeated LaneNeighbor left_neighbors = 11;
  repeated LaneNeighbor right_neighbors = 12;
}

message RoadEdge {
  enum RoadEdgeType {
    TYPE_UNKNOWN = 0;
    TYPE_ROAD_EDGE_BOUNDARY = 1;
    TYPE_ROAD_EDGE_MEDIAN = 2;
  }
  optional RoadEdgeType type = 1;
  repeated MapPoint polyline = 2;
}

message RoadLine {
  enum RoadLineType {
    TYPE_UNKNOWN = 0;
    TYPE_BROKEN_SINGLE_WHITE = 1;
    TYPE_SOLID_SINGLE_WHITE = 2;
    TYPE_SOLID_DOUBLE_WHITE = 3;
    TYPE_BROKEN_SINGLE_YELLOW = 4;
    TYPE_BROKEN_DOUBLE_YELLOW = 5;
    TYPE_SOLID_SINGLE_YELLOW = 6;
    TYPE_SOLID_DOUBLE_YELLOW = 7;
    TYPE_PASSING_DOUBLE_YELLOW = 8;
  }
  optional RoadLineType type = 1;
  repeated MapPoint polyline = 2;
}

message StopSign {
  repeated int64 lane = 1;
  optional MapPoint position = 2;
}

message Crosswalk {
  repeated MapPoint polygon = 1;
}

message SpeedBump {
  repeated MapPoint polygon = 1;
}

message Driveway {
  repeated MapPoint polygon = 1;
}
